# img_parsing_server_ex

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  parserCmd.cpp  server.cpp  session.cpp
src/include/: fileManager.hpp  imgProcess.hpp  log.hpp  misc.hpp  parserCmd.h  server.h  session.h
